# BNZClockReader

./: .gitignore  README.md  build_executable.py  pyproject.toml  read_afd.py
src/: facade.py  main.py  menu.py  read_afd.py
src/database/: connection.py  create_tables.py
src/exceptions/: peewee_exceptions.py
src/facade/: facade.py
src/gui/: menu.py
src/log/: log_config.py
src/models/: _imports.py  _model.py  _models.py  _openpyxl.py  _peewee_orm.py  employee.py  time_clock_marking.py
